Use Separate Parameters for the Prediction of HRD and GO
  - Make Parameters an abstract class
  - Create two new subclasses: DescriptionParameters and GoParamaters
  - Make TrainerOutputWriter an abstract class
  - Create a new subclass: SimulatedAnnealingTrainerOutputWriter
  - Move the formating of the trainer output into the Trainer classes
and the Parameter classes
  - Both Trainer classes can train both HRD and GO Parameters one after
the other
  - Output of both optimization path and final output is still send to
the same file so the first training will be overridden
  - Input of separate parameters is not possible yet